--- a/colors.css
+++ b/colors.css
@@ -10,3 +10,6 @@
 @define-color purple #bd93f9;
 @define-color red #ff5555;
 @define-color yellow #f1fa8c;
+
+@define-color purple-background #201030;
+
